fix collapse nav on prototype

--- a/proyek/prototipe-artikel/style/style.css
+++ b/proyek/prototipe-artikel/style/style.css
@@ -25,13 +25,15 @@ body {
 	font-family: 'Poppins', sans-serif;
 	font-size: 3em;
 	padding: 16px 32px;
+	margin-bottom: 20px;
 }
 
 .nav {
 	display: flex;
 	padding: 0 16px;
 	margin-bottom: 32px;
-	width: 400px;
+	width: 100%;
+	box-sizing: border-box;
 	justify-content:space-evenly;
 }
 
@@ -159,6 +161,15 @@ footer {
 }
 
 @media (max-width: 642px) {
+	.nav {
+		flex-direction: column;
+	}
+
+	.nav-link {
+		margin: 0;
+		margin-top: 20px;
+	}
+
 	.article {
 		flex-direction: column;
 		padding: 32px;
